--- a/html/assignments/call_for_assignments.html
+++ b/html/assignments/call_for_assignments.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assignments">
 				<h2 id="assignments">Call for Assignments (2025)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/assignments/uvc_0101-1800px.jpg" srcset="/img/assignments/uvc_0101-1800px.jpg 1800w, /img/assignments/uvc_0101-1650px.jpg 1650w, /img/assignments/uvc_0101-1500px.jpg 1500w, /img/assignments/uvc_0101-1350px.jpg 1350w, /img/assignments/uvc_0101-1200px.jpg 1200w, /img/assignments/uvc_0101-1050px.jpg 1050w, /img/assignments/uvc_0101-900px.jpg 900w, /img/assignments/uvc_0101-750px.jpg 750w, /img/assignments/uvc_0101-600px.jpg 600w, /img/assignments/uvc_0101-450px.jpg 450w, /img/assignments/uvc_0101-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/><a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
+					<img class="image-border" src="/img/assignments/uvc_0101-1800px.jpg" srcset="/img/assignments/uvc_0101-1800px.jpg 1800w, /img/assignments/uvc_0101-1650px.jpg 1650w, /img/assignments/uvc_0101-1500px.jpg 1500w, /img/assignments/uvc_0101-1350px.jpg 1350w, /img/assignments/uvc_0101-1200px.jpg 1200w, /img/assignments/uvc_0101-1050px.jpg 1050w, /img/assignments/uvc_0101-900px.jpg 900w, /img/assignments/uvc_0101-750px.jpg 750w, /img/assignments/uvc_0101-600px.jpg 600w, /img/assignments/uvc_0101-450px.jpg 450w, /img/assignments/uvc_0101-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/><a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="menu-container" aria-labelledby="menu">
@@ -82,10 +82,6 @@
 					<p><strong>The deadline for submissions is May 30, 2025</strong>. Please submit your assignment and responses directly through this <a aria-label="External Link" href="https://docs.google.com/forms/d/e/1FAIpQLSeEYXaCqKS-DdR_MK1wN5lHUTqdIDF-LNLYZAsJwXDVpXU3Sw/viewform?usp=header">Google form</a>. (Note: Google login is required to submit a copy of your assignment through the form.) Contributors will be notified of final decisions in June and full introductory essays and assignments will be due August 29, 2025.</p>
 
 					<p>Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of <a href="/html/assignments.html">previous assignments</a> and to see this Call for Assignments in the context of the website.</p>
-
-					<p>Questions about this CFA and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Sophia Hsu (<a class="mail" href="sophia.hsu@lehman.cuny.edu">sophia.hsu@lehman.cuny.edu</a>) and Jude Fogarty (<a class="mail" href="hrfogart@buffalo.edu">hrfogart@buffalo.edu</a>).</p>
-
-					<p>To be placed on the UVC mailing list, kindly fill out this <a aria-label="External Link" href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google form</a>.</p>
 
 					<p>Questions about this CFA and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Sophia Hsu (<a aria-label="External Client"  href="mailto:sophia.hsu@lehman.cuny.edu">sophia.hsu@lehman.cuny.edu</a>) and Jude Fogarty (<a aria-label="External Client" href="mailto:hrfogart@buffalo.edu">hrfogart@buffalo.edu</a>).</p>
 
