--- a/sitemap.html
+++ b/sitemap.html
@@ -180,7 +180,7 @@
 
 						<li role="none"><a href="/html/assignments.html"><span id="assignments">Assignments</span></a>
 							<ol>
-								<!-- <li><a href="/html/assignments/call_for_assignments.html">Call for Assignments (2023)</a></li> -->
+								<li><a href="/html/assignments/call_for_assignments.html">Call for Assignments (2025)</a></li>
 								<li>Beyond the Essay
 									<ol>
 										<li><a href="/html/assignments/rhetorics_empire.html">Rhetorics of Empire</a></li>
