--- a/html/assignments.html
+++ b/html/assignments.html
@@ -45,10 +45,10 @@
 					<p>These peer-reviewed assignments use innovative pedagogical approaches that are antiracist, antiableist and anticolonialist in content and/or form. While they feature a Victorian-era component, they can be adapted for a variety of teaching contexts. We offer these assignments in an effort to help us reimagine a Victorian Studies that empowers students through different forms of critical and creative engagement.</p>
 				</section>
 
-				<!-- <section aria-labelledby="assignments">
-					<h3 id="assignments">Call for Assignments (2023)</h3>
-					<div><a href="/html/assignments/call_for_assignments.html"><img loading="lazy" src="/img/assignments/tiles/uvc_0040-1136px.jpg" srcset="/img/assignments/tiles/uvc_0040-1136px.jpg 1136w, /img/assignments/tiles/uvc_0040-930px.jpg 930w, /img/assignments/tiles/uvc_0040-814px.jpg 814w, /img/assignments/tiles/uvc_0040-662px.jpg 662w, /img/assignments/tiles/uvc_0040-568px.jpg 568w, /img/assignments/tiles/uvc_0040-530px.jpg 530w, /img/assignments/tiles/uvc_0040-465px.jpg 465w, /img/assignments/tiles/uvc_0040-407px.jpg 407w, /img/assignments/tiles/uvc_0040-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/></a></div>
-				</section> -->
+				<section aria-labelledby="assignments">
+					<h3 id="assignments">Call for Assignments (2025)</h3>
+					<div><a href="/html/assignments/call_for_assignments.html"><img loading="lazy" src="/img/assignments/tiles/uvc_0101-1136px.jpg" srcset="/img/assignments/tiles/uvc_0101-1136px.jpg 1136w, /img/assignments/tiles/uvc_0101-930px.jpg 930w, /img/assignments/tiles/uvc_0101-814px.jpg 814w, /img/assignments/tiles/uvc_0101-662px.jpg 662w, /img/assignments/tiles/uvc_0101-568px.jpg 568w, /img/assignments/tiles/uvc_0101-530px.jpg 530w, /img/assignments/tiles/uvc_0101-465px.jpg 465w, /img/assignments/tiles/uvc_0101-407px.jpg 407w, /img/assignments/tiles/uvc_0101-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/></a></div>
+				</section>
 
 				<section aria-labelledby="beyond-essay-3">
 					<h3 id="beyond-essay-3">Beyond the Essay</h3>
