--- a/html/syllabi/womens_literature.html
+++ b/html/syllabi/womens_literature.html
@@ -84,19 +84,36 @@
 				<section aria-labelledby="works-cited">
 					<h3 id="works-cited">Works Cited</h3>
 
+					<p>Christian, Barbara. “The Race for Theory.” <em>Cultural Critique</em>, vol. 6, Spring 1987, pp. 51–63.</p>
+
+					<p>Fielder, Brigitte. “The Woman of Colour and Black Atlantic Movement.” <em>Women’s Narratives of the Early Americas and the Formation of Empire</em>, Palgrave Macmillan, 2016, pp. 171–85.</p>
+
+					<p>Hassan, Narin. “Jane Eyre’s Doubles: Colonial Progress and the Tradition of New Woman Writing in India.” <em>Gilbert and Gubar’s The Madwoman in the Attic after Thirty Years</em>, University of Missouri Press, 2009, pp. 111–26.</p>
+
+					<p>Kimmerer, Robin Wall. <em>Braiding Sweetgrass: Indigenous Wisdom, Scientific Knowledge, and the Teachings of Plants</em>. Milkweed Editions, 2013.</p>
+
+					<p>Mitchell, Koritha. <em>From Slave Cabins to the White House: Homemade Citizenship in African American Culture</em>. University of Illinois Press, 2020.</p>
+
+					<p>Mohanty, Chandra Talpade. “Under Western Eyes: Feminist Scholarship and Colonial Discourses.” <em>Boundary 2</em>, vol. 12, no. 3; vol. 13, no. 1, 1984.</p>
+
+					<p>Said, Edward. <em>Culture and Imperialism</em>. Vintage, 2013.</p>
+
+					<p>Simpson, Leanne Betasamosake. <em>As We Have Always Done: Indigenous Freedom through Radical Resistance</em>. University of Minnesota Press, 2017.</p>
+
+					<p>Spillers, Hortense J. “Mama’s Baby, Papa’s Maybe: An American Grammar Book.” <em>Diacritics</em>, vol. 17, no. 2, Summer 1987, pp. 64–81.</p>					
 					
 				</section>
 
 				<section aria-labelledby="series">
 					<h3 id="series">Emplacing Race, Gender and Empire Series</h3>
 
-					This cluster of syllabi is organized somewhat differently than the others that are featured on <em>Undisciplining the Victorian Classroom</em>. Instead of assembling independently constructed syllabi around a shared topic, geographic site, or theme, this cluster grew out of a conversation that took place at the 2023 North American Victorian Studies Association conference, where Yangjung Lee expressed interest in adapting a course created by Ryan D. Fong to her own local and institutional context. Although this genesis means that the two syllabi included here share many common features—not the least of which is an investment in understanding the connections between race, gender, and empire in the long nineteenth-century—the cluster provides one case study of how any syllabus on <em>UVC</em> might be revised and resituated to meet an array of institutional needs. These can include customizing text selections in ways that speak to the site-specific histories of a particular university or tailoring the content to address particular student populations and curricular requirements.
+					<p>This cluster of syllabi is organized somewhat differently than the others that are featured on <em>Undisciplining the Victorian Classroom</em> (UVC). Instead of assembling independently constructed syllabi around a shared topic, geographic site, or theme, this cluster grew out of a conversation that took place at the 2023 North American Victorian Studies Association conference, where Yangjung Lee expressed interest in adapting a course created by Ryan D. Fong to her own local and institutional context. Although this genesis means that the two syllabi included here share many common features – not the least of which is an investment in understanding the connections between race, gender, and empire in the long nineteenth-century – the cluster provides one case study of how any syllabus on <em>UVC</em> might be revised and resituated to meet an array of institutional needs. These can include customizing text selections in ways that speak to the site-specific histories of a particular university or tailoring the content to address particular student populations and curricular requirements.</p>
 				</section>
 
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					Ryan D. Fong is an associate professor of English at Kalamazoo College, where they are also affiliated faculty in the Women, Gender, and Sexuality Program. He is book project, <em>Unsettling: Indigenous Literatures and the Work of Victorian Studies,</em> is under contract with SUNY Press. This project analyzes nineteenth-century Indigenous literatures from A’nó:wara Tsi Kawè:note, Aotearoa, Mzansi, and Noongar Boodjah. Work related to this project has been published in <em>Victorian Studies</em>, <em>Victorian Literature and Culture</em>, <em>Victorian Periodical Review</em>, and <em>Eighteenth-Century Fiction</em>. <em>Fong</em> is one of the founding developers of <em>Undisciplining the Victorian Classroom.</em>
+					<p>Ryan D. Fong is an associate professor of English at Kalamazoo College, where they are also affiliated faculty in the Women, Gender, and Sexuality Program. He is book project, <em>Unsettling: Indigenous Literatures and the Work of Victorian Studies,</em> is under contract with SUNY Press. This project analyzes nineteenth-century Indigenous literatures from A’nó:wara Tsi Kawè:note, Aotearoa, Mzansi, and Noongar Boodjah. Work related to this project has been published in <em>Victorian Studies</em>, <em>Victorian Literature and Culture</em>, <em>Victorian Periodical Review</em>, and <em>Eighteenth-Century Fiction</em>. <em>Fong</em> is one of the founding developers of <em>Undisciplining the Victorian Classroom.</em></p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
