--- a/html/syllabi/women_nineteenth.html
+++ b/html/syllabi/women_nineteenth.html
@@ -84,19 +84,30 @@
 				<section aria-labelledby="works-cited">
 					<h3 id="works-cited">Works Cited</h3>
 
+					<p>Bakhtin, Mikhail. “The Bildungsroman and Its Significance in the History of Realism (Toward a Historical Typology of the Novel).” <em>Speech Genres and Other Late Essays</em>, edited by Caryl Emerson and Michael Holquist, University of Texas Press, 1987, pp. 10–59.</p>
+
+					<p>Brontë, Charlotte. <em>Jane Eyre</em>. Penguin, 2016.</p>
+
+					<p>Haboush, JaHyun Kim. “Introduction.” <em>The Memoirs of Lady Hyegyong: The Autobiographical Writings of a Crown Princess of Eighteenth-Century Korea</em>, translated by JaHyun Kim Haboush, University of California Press, 2013, pp. 1–36.</p>
+
+					<p>Mignolo, Walter D. “Sylvia Wynter: What Does It Mean to Be Human?” <em>Sylvia Wynter: On Being Human as Praxis</em>, edited by Katherine McKittrick, Duke University Press, 2015, pp. 106–23.</p>
+
+					<p>Sharpe, Christina. <em>In the Wake: On Blackness and Being</em>. Duke University Press, 2016.</p>
+
+					<p>Wynter, Sylvia. “Unsettling the Coloniality of Being/Power/Truth/Freedom: Towards the Human, after Man, Its Overrepresentation─An Argument.” <em>CR: THe New Centennial Review</em>, vol. 3, no. 3, 2003, pp. 257–337.</p>					
 					
 				</section>
 
 				<section aria-labelledby="series">
 					<h3 id="series">Emplacing Race, Gender and Empire Series</h3>
 
-					This cluster of syllabi is organized somewhat differently than the others that are featured on <em>Undisciplining the Victorian Classroom</em>. Instead of assembling independently constructed syllabi around a shared topic, geographic site, or theme, this cluster grew out of a conversation that took place at the 2023 North American Victorian Studies Association conference, where Yangjung Lee expressed interest in adapting a course created by Ryan D. Fong to her own local and institutional context. Although this genesis means that the two syllabi included here share many common features—not the least of which is an investment in understanding the connections between race, gender, and empire in the long nineteenth-century—the cluster provides one case study of how any syllabus on <em>UVC</em> might be revised and resituated to meet an array of institutional needs. These can include customizing text selections in ways that speak to the site-specific histories of a particular university or tailoring the content to address particular student populations and curricular requirements.
+					<p>This cluster of syllabi is organized somewhat differently than the others that are featured on <em>Undisciplining the Victorian Classroom</em> (UVC). Instead of assembling independently constructed syllabi around a shared topic, geographic site, or theme, this cluster grew out of a conversation that took place at the 2023 North American Victorian Studies Association conference, where Yangjung Lee expressed interest in adapting a course created by Ryan D. Fong to her own local and institutional context. Although this genesis means that the two syllabi included here share many common features – not the least of which is an investment in understanding the connections between race, gender, and empire in the long nineteenth-century – the cluster provides one case study of how any syllabus on <em>UVC</em> might be revised and resituated to meet an array of institutional needs. These can include customizing text selections in ways that speak to the site-specific histories of a particular university or tailoring the content to address particular student populations and curricular requirements.</p>
 				</section>
 
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					Yangjung Lee is an Assistant Professor of English at Seattle University. Her research and teaching interests include race and empire in nineteenth-century Anglophone literature, slavery and emancipation in the Americas, the Caribbean, and Korean literature. Her book project, “A Guilty Emancipation," problematizes the triumphant narrative of British abolition by reading the absence of compensation for enslavers in Victorian fiction to uncover the racial logic of the post-emancipation British empire. Her work has appeared in <em>Victorian Studies</em>.
+					<p>Yangjung Lee is an Assistant Professor of English at Seattle University. Her research and teaching interests include race and empire in nineteenth-century Anglophone literature, slavery and emancipation in the Americas, the Caribbean, and Korean literature. Her book project, “A Guilty Emancipation," problematizes the triumphant narrative of British abolition by reading the absence of compensation for enslavers in Victorian fiction to uncover the racial logic of the post-emancipation British empire. Her work has appeared in <em>Victorian Studies</em>.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
