--- a/html/syllabi/undisciplining_white_1.html
+++ b/html/syllabi/undisciplining_white_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Undisciplining White Feminism | Undisciplining the Victorian Classroom</title><!-- Change -->
+    <title>Undisciplining White Feminism (1) | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="Course on women's writing of the nineteenth-century in the US and British empires, focusing on Indigenous North America, the Black Atlantic, and South Asia."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 id="syllabus">Undisciplining White Feminism</h2><!-- Change -->
+				<h2 id="syllabus">Undisciplining White Feminism (1)</h2><!-- Change -->
 					<div class="aspect-ratio-box">
           	<img src="/img/syllabi/uvc_0102-1800px.jpg" srcset="/img/syllabi/uvc_0102-1800px.jpg 1800w, /img/syllabi/uvc_0102-1650px.jpg 1650w, /img/syllabi/uvc_0102-1500px.jpg 1500w, /img/syllabi/uvc_0102-1350px.jpg 1350w, /img/syllabi/uvc_0102-1200px.jpg 1200w, /img/syllabi/uvc_0102-1050px.jpg 1050w, /img/syllabi/uvc_0102-900px.jpg 900w, /img/syllabi/uvc_0102-750px.jpg 750w, /img/syllabi/uvc_0102-600px.jpg 600w, /img/syllabi/uvc_0102-450px.jpg 450w, /img/syllabi/uvc_0102-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -140,7 +140,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-					<p>Ryan D. Fong, dev. “Undisciplining White Feminism.” Amy R. Wong , peer rev.; Yangjung Lee and Ryan D. Fong, syl. clust. dev.; , syl. guide;  , copyed. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/syllabi/undisciplining_white.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/undisciplining_white.html</a>.</p><!-- Change -->
+					<p>Ryan D. Fong, dev. “Undisciplining White Feminism (1).” Amy R. Wong , peer rev.; Yangjung Lee and Ryan D. Fong, syl. clust. dev.; , syl. guide;  , copyed. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/syllabi/undisciplining_white.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/undisciplining_white.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
