--- a/html/lesson_plans/contemporary_undisciplining_introduction.html
+++ b/html/lesson_plans/contemporary_undisciplining_introduction.html
@@ -88,7 +88,7 @@
 
 					<p>For this reason, we have made every effort to provide materials that will allow teachers to present all of the various texts in the pairings/clusters with a sense of aesthetic and cultural parity. By pointing to resources and scholarship from outside Victorian studies, each lesson plan functions as a mini-syllabus for the learning and un-learning that “undisciplining” necessitates. We believe this is vital to the anti-racist and anti-colonial aims of not only this unit but the project of <em>UVC </em>as a whole, by recognizing and building these citational links and forms of intellectual commitment and solidarity.</p>
 					
-					<p>As with all work on <em>UVC</em>, this lesson plan cluster was created through a process of careful and repeated collaboration. Each lesson plan went through two reviews during workshops held over Zoom, with multiple cluster participants reviewing each entry.</p>
+					<p>As with all work on UVC, this lesson plan cluster was created through a process of careful and repeated collaboration. Each lesson plan went through two reviews during workshops held over Zoom, with multiple cluster participants reviewing each entry.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
