--- a/html/lesson_plans/call_for_lesson_plan_decadence.html
+++ b/html/lesson_plans/call_for_lesson_plan_decadence.html
@@ -75,7 +75,7 @@
 
 					<p>Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies and academia more broadly. You can send your submission through <a aria-label="External Link" href="https://forms.gle/6VNP453P3rYtBJAU9">this form</a>. <strong>The deadline is February 28, 2025</strong>.</p>
 
-					<p>Submissions will be reviewed by the <em>UVC</em> Co-Directors. Please contact <a aria-label="External Client" href="mailto:cherriemyk@gmail.com?subject=Decadence%20LP%20Cluster">Cherrie Kwok</a> if you have any questions.</p>
+					<p>Submissions will be reviewed by the UVC Co-Directors. Please contact <a aria-label="External Client" href="mailto:cherriemyk@gmail.com?subject=Decadence%20LP%20Cluster">Cherrie Kwok</a> if you have any questions.</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
