--- a/html/syllabi/undisciplining_white_2.html
+++ b/html/syllabi/undisciplining_white_2.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Undisciplining White Feminism (2)</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/syllabi/uvc_0103-1800px.jpg" srcset="/img/syllabi/uvc_0103-1800px.jpg 1800w, /img/syllabi/uvc_0103-1650px.jpg 1650w, /img/syllabi/uvc_0103-1500px.jpg 1500w, /img/syllabi/uvc_0103-1350px.jpg 1350w, /img/syllabi/uvc_0103-1200px.jpg 1200w, /img/syllabi/uvc_0103-1050px.jpg 1050w, /img/syllabi/uvc_0103-900px.jpg 900w, /img/syllabi/uvc_0103-750px.jpg 750w, /img/syllabi/uvc_0103-600px.jpg 600w, /img/syllabi/uvc_0103-450px.jpg 450w, /img/syllabi/uvc_0103-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
+          	<img src="/img/syllabi/uvc_0103-750px.jpg" srcset="/img/syllabi/uvc_0103-750px.jpg 750w, /img/syllabi/uvc_0103-600px.jpg 600w, /img/syllabi/uvc_0103-450px.jpg 450w, /img/syllabi/uvc_0103-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A group of seven women, randing in age from adolescent to adult, gathered around a kitchen table."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -142,6 +142,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
+					<p>Brady, Ferd. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Tulalip_Indian_School_students_in_kitchen.jpg">Kitchen Girls [Tulalip Indian School Students in Kitchen]</a>. [c.1912], <em>Wikimedia Commons</em>. Public domain.</p>
 					
 				</section>
 				
