--- a/html/syllabi/undisciplining_white_1.html
+++ b/html/syllabi/undisciplining_white_1.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Undisciplining White Feminism (1)</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/syllabi/uvc_0102-1800px.jpg" srcset="/img/syllabi/uvc_0102-1800px.jpg 1800w, /img/syllabi/uvc_0102-1650px.jpg 1650w, /img/syllabi/uvc_0102-1500px.jpg 1500w, /img/syllabi/uvc_0102-1350px.jpg 1350w, /img/syllabi/uvc_0102-1200px.jpg 1200w, /img/syllabi/uvc_0102-1050px.jpg 1050w, /img/syllabi/uvc_0102-900px.jpg 900w, /img/syllabi/uvc_0102-750px.jpg 750w, /img/syllabi/uvc_0102-600px.jpg 600w, /img/syllabi/uvc_0102-450px.jpg 450w, /img/syllabi/uvc_0102-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
+          	<img src="/img/syllabi/uvc_0104-0105-1800px.jpg" srcset="/img/syllabi/uvc_0104-0105-1800px.jpg 1800w, /img/syllabi/uvc_0104-0105-1650px.jpg 1650w, /img/syllabi/uvc_0104-0105-1500px.jpg 1500w, /img/syllabi/uvc_0104-0105-1350px.jpg 1350w, /img/syllabi/uvc_0104-0105-1200px.jpg 1200w, /img/syllabi/uvc_0104-0105-1050px.jpg 1050w, /img/syllabi/uvc_0104-0105-900px.jpg 900w, /img/syllabi/uvc_0104-0105-750px.jpg 750w, /img/syllabi/uvc_0104-0105-600px.jpg 600w, /img/syllabi/uvc_0104-0105-450px.jpg 450w, /img/syllabi/uvc_0104-0105-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Frances Ellen Watkins Harper, standing, in profile, turned left, facing the viewer. Right: Zitkála-Šá seated, facing the viewer, leaning back, with head turned to her right."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -145,7 +145,10 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
+					<p>(Left) Scruggs, L.A. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Women_of_distinction_-_remarkable_in_works_and_invincible_in_character_(1893)_(14598047448).jpg">Women of Distinction: Remarkable in Works and Invincible in Character</a>. 1893. <em>Wikimedia Commons</em> Availability confirmed via the <a aria-label="External Link" href="https://en.wikipedia.org/wiki/API">Flickr API</a>.</p>
 					
+					<p>(Right) Keiley, Joseph Turner. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Smithsonian_-_NPG_-_Zitkala-Sa_-_NPG.2006.10.jpg">Zitkála-Šá</a>. 1898. <em>Wikimedia Commons</em>. National Portrait Gallery, Smithsonian Institution. <a aria-label="External Link" href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">Creative Commons CC0 1.0 Universal Public Domain Dedication</a>.</p>
+
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
