--- a/sitemap.html
+++ b/sitemap.html
@@ -128,6 +128,12 @@
 						<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 							<ol>
 								<!-- <li><a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li> -->
+								<li>Emplacing Race, Gender, and Empire
+									<ol>
+										<li><a href="/html/syllabi/undisciplining_white_1.html">Undisciplining White Feminism (1)</a></li>
+										<li><a href="/html/syllabi/undisciplining_white_2.html">Undisciplining White Feminism (2)</a></li>
+									</ol>
+								</li>
 								<li>Religion, Secularism, Empire
 									<ol>
 										<li><a href="/html/syllabi/constructing_religion.html">Constructing Religion and Empire in Nineteenth-Century Literature</a></li>
