--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -91,6 +91,7 @@
 						<li><strong>Heidi Kaufman</strong> (University of Oregon)</li>
 						<li><strong>Sebastian Lecourt</strong> (University of Houston)</li>
 						<li><strong>Ji Eun Lee</strong> (Sungkyunkwan University)</li>
+						<li><strong>Yangjung Lee</strong> (Seattle University)</li>
 						<li><strong>Margaret Linley</strong> (Simon Fraser University)</li>
 						<li><strong>Waiyee Loh</strong> (Kanagawa University)</li>
 						<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
