--- a/html/syllabi/undisciplining_white_1.html
+++ b/html/syllabi/undisciplining_white_1.html
@@ -55,7 +55,7 @@
 
 						<p><strong>Webpage Developer:</strong> Adrian S. Wisnicki</p><!-- Change -->							
 
-						<p><strong>Cluster Title:</strong> Emplacing Race, Gender and Empire</p><!-- Change -->
+						<p><strong>Cluster Title:</strong> Emplacing Race, Gender, and Empire</p><!-- Change -->
 
 						<p><strong>Publication Date:</strong> 2025</p>
 					</div>
@@ -66,7 +66,7 @@
 					<ol class="menu">
 						<li><a href="#overview">Syllabus Overview</a></li>
 						<li><a href="#works-cited">Works Cited</a></li>
-						<li><a href="#series">Emplacing Race, Gender and Empire Series</a></li><!-- Change -->
+						<li><a href="#series">Emplacing Race, Gender, and Empire Series</a></li><!-- Change -->
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
@@ -131,7 +131,7 @@
 				</section>
 
 				<section aria-labelledby="series">
-					<h3 id="series">Emplacing Race, Gender and Empire Series</h3>
+					<h3 id="series">Emplacing Race, Gender, and Empire Series</h3>
 
 					<p>This cluster of syllabi is organized somewhat differently than the others that are featured on <em>Undisciplining the Victorian Classroom</em> (UVC). Instead of assembling independently constructed syllabi around a shared topic, geographic site, or theme, this cluster grew out of a conversation that took place at the 2023 North American Victorian Studies Association conference, where Yangjung Lee expressed interest in adapting a course created by Ryan D. Fong to her own local and institutional context. Although this genesis means that the two syllabi included here share many common features – not the least of which is an investment in understanding the connections between race, gender, and empire in the long nineteenth-century – the cluster provides one case study of how any syllabus on UVC might be revised and resituated to meet an array of institutional needs. These can include customizing text selections in ways that speak to the site-specific histories of a particular university or tailoring the content to address particular student populations and curricular requirements.</p>
 				</section>
