--- a/html/lesson_plans/social_justice_introduction.html
+++ b/html/lesson_plans/social_justice_introduction.html
@@ -77,7 +77,7 @@
 
 					<p>In an era of increasingly restrictive and exclusionary educational laws that surveil the public school system, there is an ongoing, exigent need for critically focused readings by people of color (POC). This set of lesson plans for high school classrooms seeks to offer readings and discussion questions that consider both historical and contemporary perspectives on nationalism, revolution, futurity, and other activist efforts.</p>
 
-					<p>The four lesson plans in this cluster center the voices of POC groups around the globe in different time periods, ranging from the imperial reign of Queen Victoria (1837-1901) to the current era. This focus on diverse historical voices showcases how issues of race and colonialism are not new concepts and are instead inextricably tied to the rise of western empires and how these logics can be applied to the American empire.</p>
+					<p>The four lesson plans in this cluster center the voices of POC groups around the globe in different time periods, ranging from the imperial reign of Queen Victoria (1837-1901) to the current era (2025). This focus on diverse historical voices showcases how issues of race and colonialism are not new concepts and are instead inextricably tied to the rise of western empires and how these logics can be applied to the American empire.</p>
 
 					<p>I am an M.A. student at the University of Nebraska Lincoln with a B.A. in English education. I created these lesson plans during the 2023-2024 academic year, under the guidance of Professor Adrian S. Wisnicki. They were developed while I was a research assistant (RA) for Professor Wisnicki. The lesson plans formed the primary focus of my work during the RA-ship. After the end of my RA-ship, I continued to revise the lesson plans. This included two stages of peer review, the first from an internal reviewer (Cherrie Kwok) and the second from an external one (Nirshan Perera).</p>
 
@@ -105,7 +105,7 @@
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					<p>Darian Wilson is a graduate student in English at the University of Nebraska-Lincoln with an emphasis in literary and cultural studies. Her current research involves mapping the intersections of childhood, nationalism, and carceral educational systems. From this map, she wants to examine how this may culminate in the current construction and surveillance of neurodivergent personhood. Most recently she presented an essay on the socialist possibilities of neuroqueer rhetorics at the Northeastern Modern Language Association. <em>Pronouns:</em> she/they</p>
+					<p>Darian Wilson is a graduate student in English at the University of Nebraska-Lincoln with an emphasis in literary and cultural studies. Her current research involves mapping the intersections of childhood, nationalism, and carceral educational systems. From this map, she wants to examine how this may culminate in the current construction and surveillance of neurodivergent personhood. In 2026 she will present on the future of childhood studies through a neuroqueer lens at the Modern Language Association Conference in Toronto, Canada. <em>Pronouns:</em> she/they</p>
 				</section>
 
 				<section class="small" aria-labelledby="caption">
