--- a/html/lesson_plans/undiscipling_monsters_monstrosity.html
+++ b/html/lesson_plans/undiscipling_monsters_monstrosity.html
@@ -60,15 +60,23 @@
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#overview">Overview</a></li>
-						<li><a href="#structure">Structure and Organisation</a></li>
-						<li><a href="#materials">Suggested Materials</a>
+						<li><a href="#lesson-plan-description">Lesson Plan Description</a></li>
+						<li><a href="#lesson-plan-texts">Lesson Plan Texts</a></a>
 							<ol>
-								<li><a href="materials-1">[Change to first title]</a></li>
-								<li><a href="materials-2">[Change to second title]</a></li>
-								<li><a href="materials-3">[Change to third title]</a></li>
+								<li><a href="primary-texts">Primary Texts</a></li>
+								<li><a href="supplemental-primary-texts">Supplemental Primary Texts</a></li>
+								<li><a href="supplemental-and-secondary-texts">Supplemental and Secondary Texts</a></li>
 							</ol>
 						</li>
+						<li><a href="#class-activities-and-discussion-questions">Class Activities and Discussion Questions</a>
+							<ol>
+								<li><a href="informal-activities">Informal Activities</a></li>
+								<li><a href="formal-activities">Formal Activities</a></li>
+								<li><a href="informal-and-formal-activities">Informal and Formal Activities</a></li>
+								<li><a href="final-projects">Final Projects</a></li>
+							</ol>
+						</li>
+						<li><a href="#works-cited">Works Cited</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
