--- a/html/lesson_plans/undiscipling_monsters_monstrosity.html
+++ b/html/lesson_plans/undiscipling_monsters_monstrosity.html
@@ -63,17 +63,17 @@
 						<li><a href="#lesson-plan-description">Lesson Plan Description</a></li>
 						<li><a href="#lesson-plan-texts">Lesson Plan Texts</a></a>
 							<ol>
-								<li><a href="primary-texts">Primary Texts</a></li>
-								<li><a href="supplemental-primary-texts">Supplemental Primary Texts</a></li>
-								<li><a href="supplemental-and-secondary-texts">Supplemental and Secondary Texts</a></li>
+								<li><a href="#primary-texts">Primary Texts</a></li>
+								<li><a href="#supplemental-primary-texts">Supplemental Primary Texts</a></li>
+								<li><a href="#supplemental-and-secondary-texts">Supplemental and Secondary Texts</a></li>
 							</ol>
 						</li>
 						<li><a href="#class-activities-and-discussion-questions">Class Activities and Discussion Questions</a>
 							<ol>
-								<li><a href="informal-activities">Informal Activities</a></li>
-								<li><a href="formal-activities">Formal Activities</a></li>
-								<li><a href="informal-and-formal-activities">Informal and Formal Activities</a></li>
-								<li><a href="final-projects">Final Projects</a></li>
+								<li><a href="#informal-activities">Informal Activities</a></li>
+								<li><a href="#formal-activities">Formal Activities</a></li>
+								<li><a href="#informal-and-formal-activities">Informal and Formal Activities</a></li>
+								<li><a href="#final-projects">Final Projects</a></li>
 							</ol>
 						</li>
 						<li><a href="#works-cited">Works Cited</a></li>
@@ -325,7 +325,7 @@
 
 					<p>Also, both categories of activities capitalize on writing as a tool for internalizing the taught subject matter, getting students to engage with the subject and familiarizing them with the discourse conventions of the literary discipline. This approach allows students to develop critical thinking and writing skills as it employs strategies of the Writing Across Curriculum program of development (“What is a WAC Program”).</p>
 
-					<p>Below are some samples of writing tasks and discussion prompts:</p>
+					<p>Below are some samples of writing tasks and discussion prompts.</p>
 
 					<section aria-labelledby="informal-activities">
 					<h4 id="informal-activities">Informal Activities</h4>
@@ -349,7 +349,7 @@
                 <li>Complete a comparative <em>genre feature grid</em> that highlights elements of Afrofuturism, Africanfuturism, Africanjujuism, and Victorian Gothic using the following markers:</li>
               </ol>
 
-              <ul>
+              <ul class="markers-questions">
                 <li>Setting and geography</li>
 
                 <li>Specific societal/cultural anxiety</li>
@@ -427,15 +427,15 @@
             </section>
 
             <section aria-labelledby="formal-activities">
-            <h4 id="formal-activities">Formal Activities</h4>
-            </section>
+              <h4 id="formal-activities">Formal Activities</h4>
 
-            <section aria-labelledby="monstrosity-and-colonialism">
-              <h5 id="monstrosity-and-colonialism">Monstrosity and Colonialism</h5>
+              <section aria-labelledby="monstrosity-and-colonialism">
+                <h5 id="monstrosity-and-colonialism">Monstrosity and Colonialism</h5>
 
-              <p><strong>Objective(s):</strong> Analyze the colonial ideologies reflected through the relationship between the Beast Folk and the scientists in <em>The Island of Dr Moreau</em>, reflect the limitations of AI in generating answers to literary analysis, and encourage students to engage in close reading of texts.</p>
+                <p><strong>Objective(s):</strong> Analyze the colonial ideologies reflected through the relationship between the Beast Folk and the scientists in <em>The Island of Dr Moreau</em>, reflect the limitations of AI in generating answers to literary analysis, and encourage students to engage in close reading of texts.</p>
 
-              <p><strong>Formal Activity:</strong> Highlight and compare specific descriptions of the Beast Folk in <em>The Island of Dr Moreau</em> and the Negro slaves by Englishmen in Willie Lynch’s, <em>The Making of a Slave</em>. Discuss how the descriptions echo ideologies of white supremacy and monstrosity. Next, using any generative AI platform, carry out the same writing task and compare the results of the two outputs.</p>
+                <p><strong>Formal Activity:</strong> Highlight and compare specific descriptions of the Beast Folk in <em>The Island of Dr Moreau</em> and the Negro slaves by Englishmen in Willie Lynch’s, <em>The Making of a Slave</em>. Discuss how the descriptions echo ideologies of white supremacy and monstrosity. Next, using any generative AI platform, carry out the same writing task and compare the results of the two outputs.</p>
+              </section>
             </section>
 					</section>
 
@@ -529,10 +529,10 @@
 						<h4 id="final-projects">Final Projects</h4>
 
 						<ol>
-							<li>Using either <em>The Island of Dr Moreau</em> or <em>The Book of Phoenix</em>, draw an empathy gram that illustrates the emotions of different “monster” characters in the text throughout the chapters. The empathy gram is a diagram that maps the network of emotions, perspectives and experiences of “monster” characters in the texts. From the students’ understanding of their chosen texts, they are expected to use diagramming tools like Lucidchart or draw.io to visualise a network of how these “monster” characters perceive the world around them. Questions to consider can include:</li>
+							<li><em>Empathy Gram:</em> Using either <em>The Island of Dr Moreau</em> or <em>The Book of Phoenix</em>, draw an empathy gram that illustrates the emotions of different “monster” characters in the text throughout the chapters. The empathy gram is a diagram that maps the network of emotions, perspectives and experiences of “monster” characters in the texts. From the students’ understanding of their chosen texts, they are expected to use diagramming tools like Lucidchart or draw.io to visualise a network of how these “monster” characters perceive the world around them. Questions to consider can include:</li>
 						</ol>
 
-						<ul>
+						<ul class="markers-questions">
 							<li>What does the monster character <em>see</em>?</li>
 
 							<li>What is done to them?</li>
@@ -545,10 +545,10 @@
 						<p>The map can be drawn according to chapters. It is also advised that this project be introduced at the beginning of the class to enable students to draw the map as they read the texts for other class activities.</p>
 
 						<ol start="2">
-							<li><strong>Final Portfolio:</strong> Collate all writing tasks done during the class and write a reflective personal introduction that:</li>
+							<li><em>Final Portfolio:</em> Collate all writing tasks done during the class and write a reflective personal introduction that:</li>
 						</ol>
 
-						<ul>
+						<ul class="markers-questions">
 							<li>Explains how the given student’s understanding of monstrosity evolved over the course.</li>
 
 							<li>Identifies key themes that stood out to them (e.g., colonialism, body modification, hybridity, resistance); and</li>
