--- a/html/lesson_plans/undiscipling_monsters_monstrosity.html
+++ b/html/lesson_plans/undiscipling_monsters_monstrosity.html
@@ -83,18 +83,6 @@
 					</ol>
 				</section>
 
-				<aside class="breakout-quote" aria-labelledby="user-guide">
-<h3 id="user-guide">Afrofuturism, Africanfuturism, and Africanjujuism</h3>
-
-<p>This lesson plan uses these concepts to show that monsters and monstrosity are culturally specific and so enables a sharper comparison between Victorian literature and Nigerian speculative re-imaginings.</p>
-
-<p><strong>Afrofuturism:</strong> A diasporic speculative framework, emerging largely from African American contexts that uses science, technology, and futurity to imagine Black futures and reclaim Black pasts disrupted by oppression. This lesson plan references this concept to clarify what Africanfuturism is not.</p>
-
-<p><strong>Africanfuturism:</strong> A continent-centered speculative genre rooted in Africa rather than the diaspora that focuses on indigenous experiences, epistemologies, and future possibilities. Africanfuturism is less concerned with “what could have been” than with “what is and can/will be.” The concept helps show monsters as critiques of colonial and postcolonial power, science, and technological control in African contexts.</p>
-
-<p><strong>Africanjujuism:</strong> A sub-genre that foregrounds African spirituality and cosmology by presenting the “magical” as culturally grounded, technologically relevant, and ethically complex rather than primitive or irrational. The concept helps show monsters as spiritual and ethical warnings rather than aberrations or irrational beings.</p>
-				</aside>
-
 				<section aria-labelledby="lesson-plan-description">
           <h3 id="lesson-plan-description">Lesson Plan Description</h3>
 
@@ -126,6 +114,18 @@
             <li>develop critical writing and multimodal skills</li>
           </ul>
 				</section>
+
+        <aside class="breakout-quote" aria-labelledby="concepts">
+          <h3 id="concepts">Afrofuturism, Africanfuturism, Africanjujuism</h3>
+
+          <p>This lesson plan uses these concepts to show that monsters and monstrosity are culturally specific and so enables a sharper comparison between Victorian literature and Nigerian speculative re-imaginings.</p>
+
+          <p><strong>Afrofuturism:</strong> A diasporic speculative framework, emerging largely from African American contexts that uses science, technology, and futurity to imagine Black futures and reclaim Black pasts disrupted by oppression. This lesson plan references this concept to clarify what Africanfuturism is not.</p>
+
+          <p><strong>Africanfuturism:</strong> A continent-centered speculative genre rooted in Africa rather than the diaspora that focuses on indigenous experiences, epistemologies, and future possibilities. Africanfuturism is less concerned with “what could have been” than with “what is and can/will be.” The concept helps show monsters as critiques of colonial and postcolonial power, science, and technological control in African contexts.</p>
+
+          <p><strong>Africanjujuism:</strong> A sub-genre that foregrounds African spirituality and cosmology by presenting the “magical” as culturally grounded, technologically relevant, and ethically complex rather than primitive or irrational. The concept helps show monsters as spiritual and ethical warnings rather than aberrations or irrational beings.</p>
+				</aside>
 
 				<section aria-labelledby="lesson-plan-texts">
           <h3 id="lesson-plan-texts">Lesson Plan Texts</h3>
