--- a/sitemap.html
+++ b/sitemap.html
@@ -66,6 +66,7 @@
 							<ol>
 							<!-- <li><a href="/html/lesson_plans/call_for_lesson_plan_decadence.html">Call for Participants: Global Decadence and Aestheticism Lesson Plan Cluster (2024)</a></li> -->
 							<!-- <li><a href="/html/lesson_plans/call_for_lesson_plan_participants.html">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</a></li> -->
+              <li><a href="html/lesson_plans/undiscipling_monsters_monstrosity.html">Undisciplining Monsters and Monstrosity</a></li>
 							<li><a href="html/lesson_plans/social_justice_introduction.html">Social Justice Movements in the Victorian Era and Beyond</a>
 								<ol>
 									<li><a href="/html/lesson_plans/social_dystopian_utopian.html">Dystopian and Utopian Literature</a></li>
