--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -96,6 +96,7 @@
 						<li><strong>Waiyee Loh</strong> (Kanagawa University)</li>
 						<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
 						<li><strong>Shantanu Majee</strong> (Techno India University)</li>
+            <li><strong>Cynthia Mbagwu</strong> (University of Nebraska-Lincoln)</li>
 						<li><strong>Ashley Nadeau</strong> (Utah Valley University)</li>
 						<li><strong>Diana Rose Newby</strong> (Princeton University)</li>
 						<li><strong>Indu Ohri</strong> (University of Virginia)</li>
