--- a/html/lesson_plans/undiscipling_monsters_monstrosity.html
+++ b/html/lesson_plans/undiscipling_monsters_monstrosity.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Undisciplining Monsters and Monstrosity</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/lesson_plans/uvc_uvc_0106-1800px.jpg" srcset="/img/lesson_plans/uvc_uvc_0106-1800px.jpg 1800w, /img/lesson_plans/uvc_uvc_0106-1650px.jpg 1650w, /img/lesson_plans/uvc_uvc_0106-1500px.jpg 1500w, /img/lesson_plans/uvc_uvc_0106-1350px.jpg 1350w, /img/lesson_plans/uvc_uvc_0106-1200px.jpg 1200w, /img/lesson_plans/uvc_uvc_0106-1050px.jpg 1050w, /img/lesson_plans/uvc_uvc_0106-900px.jpg 900w, /img/lesson_plans/uvc_uvc_0106-750px.jpg 750w, /img/lesson_plans/uvc_uvc_0106-600px.jpg 600w, /img/lesson_plans/uvc_uvc_0106-450px.jpg 450w, /img/lesson_plans/uvc_uvc_0106-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt=""/><!-- Change -->
+          	<img src="/img/lesson_plans/uvc_uvc_0106-1800px.jpg" srcset="/img/lesson_plans/uvc_uvc_0106-1800px.jpg 1800w, /img/lesson_plans/uvc_uvc_0106-1650px.jpg 1650w, /img/lesson_plans/uvc_uvc_0106-1500px.jpg 1500w, /img/lesson_plans/uvc_uvc_0106-1350px.jpg 1350w, /img/lesson_plans/uvc_uvc_0106-1200px.jpg 1200w, /img/lesson_plans/uvc_uvc_0106-1050px.jpg 1050w, /img/lesson_plans/uvc_uvc_0106-900px.jpg 900w, /img/lesson_plans/uvc_uvc_0106-750px.jpg 750w, /img/lesson_plans/uvc_uvc_0106-600px.jpg 600w, /img/lesson_plans/uvc_uvc_0106-450px.jpg 450w, /img/lesson_plans/uvc_uvc_0106-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Two monstrous figures facing left; both holding pitchforks; one covered by fur, one naked."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -564,7 +564,7 @@
         <section aria-labelledby="acknowledgments">
 					<h3 id="acknowledgments">Acknowledgments</h3>
 
-					<p></p>
+					<p>I appreciate: Prof. Adrian Wisnicki, my supervisor, for his steady guidance in helping me produce more grounded research; Prof. Mathias Iroro Orhero, whose peer review sharpened the rough edges and strengthened the clarity of the work; and Prof. Laura White, Darlington Anuonye, and Ugwuanyi Leonard, who listened, read, and offered unwavering support at various stages of the research.</p>
 				</section>
 
 				<section aria-labelledby="works-cited">
@@ -594,7 +594,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					
+					<p>Once Known Artist. “<a aria-label="External Link" href="https://digitalcollections.nypl.org/items/896aaf50-c60a-012f-494f-58d385a7bc34">Monster and Devil, ff. 82v-83</a>.” Watercolor drawing. 1569-1591, NYPL Digital Collections, Spencer Collection. From The New York Public Library. The New York Public Library believes that this item is in the public domain under the laws of the United States, but did not make a determination as to its copyright status under the copyright laws of other countries. This item may not be in the public domain under the laws of other countries.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
