--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -52,7 +52,7 @@
 
 				<!-- <section aria-labelledby="monsters">
 					<h3 id="monsters">Undisciplining Monsters and Monstrosity</h3>
-					<div><a href="/html/lesson_plans/undiscipling_monsters_monstrosity.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0106-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0106-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0106-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0106-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0106-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0106-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0106-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0106-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0106-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt=""/><span>Main Page</span><p class="new">New</p></a></div>
+					<div><a href="/html/lesson_plans/undiscipling_monsters_monstrosity.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0106-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0106-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0106-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0106-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0106-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0106-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0106-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0106-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0106-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt=""/><span>Main Page</span><p class="new">New</p></a></div>
 				</section> -->
 
 				<section aria-labelledby="social-1">
